--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+1999-08-02  Thorsten Kukuk  <kukuk@suse.de>
+
+	* nis/nis_callback.c: Fix port problem on big-endian machines
+	* sunrpc/clnt_udp.c: Cast to uint32_t pointer, not short. RPC
+	fields are always 32 bit.
+	Patches from Paul Mackerras <paulus@cs.anu.edu.au>
+
+	* nis/nss_nis/nis-service.c: Remove htons, port is always in
+	network-byte-order.
+	* nis/nss_nisplus/nisplus-service.c: Rename number to port.
+
 1999-08-03  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/posix/sigset.c: Unblock the signal after setting its
