--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-05  Ulrich Drepper  <drepper@cygnus.com>
+
+	* libio/genops.c (_IO_flush_all): Don't access elements beyond what
+	2.0 defined if they are not available.
+
 1999-08-05  Thorsten Kukuk  <kukuk@suse.de>
 
 	* sysdeps/unix/sysv/linux/alpha/bits/fcntl.h (O_RSYNC, O_DSYNC):
