--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-06  Ulrich Drepper  <drepper@cygnus.com>
+
+	* inet/tst-ipnode.c: New file.
+
 1999-08-06  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/unix/sysv/linux/sparc/bits/fcntl.h (O_DSYNC, O_RSYNC):
