--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-06  H.J. Lu  <hjl@gnu.org>
+
+	* malloc/malloc.c: Initialize __libc_pagesize early.
+
 1999-08-06  Ulrich Drepper  <drepper@cygnus.com>
 
 	* string/string-inlines.c: Undefined __USE_STRING_INLINES before
