--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-13  Ulrich Drepper  <drepper@cygnus.com>
+
+	* po/fr.po: Update.
+
 1999-08-11  Thorsten Kukuk  <kukuk@suse.de>
 
 	* nis/nis_callback.c (internal_nis_do_callback): Free my_pollfd.
