--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-13  Ulrich Drepper  <drepper@cygnus.com>
+
+	* stdio-common/tstscanf.c: Add test for hexadecimal float parsing
+	problem.
+
 1999-08-13  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* configure.in: install-sh lives now in scripts subdir.
