--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,10 @@
+1999-08-15  Ulrich Drepper  <drepper@cygnus.com>
+
+	* localedata/locales/ca_ES: New file.
+	Contributed by Joan Carles Soler <Joan.Soler@uv.es>.
+
+	* SUPPORTED: Add ca_ES.
+
 1999-05-18  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Makefile (LOCALEDEF): Add I18NPATH definition to find the
