--- a/INSTALL
+++ b/INSTALL
@@ -87,7 +87,7 @@ will be used, and CFLAGS sets optimization options for the compiler.
      given with no list, it enables all the add-on packages it finds.
      If you do not wish to use some add-on package that you have
      present in your source tree, give this option a list of the
-     add-ons that you *do* want used, like this:
+     add-ons that you _do_ want used, like this:
      `--enable-add-ons=crypt,linuxthreads'
 
 `--with-binutils=DIRECTORY'
@@ -144,9 +144,10 @@ will be used, and CFLAGS sets optimization options for the compiler.
      is.  This is most useful to change the CPU submodel.  For example,
      if configure guesses your machine as `i586-pc-linux-gnu' but you
      want to compile a library optimized for 386es, give
-     `--host=i386-pc-linux-gnu' or just `--host=i386-linux'.  (A
-     library compiled for a Pentium (`i586') will still work on a 386,
-     but it may be slower.)
+     `--host=i386-pc-linux-gnu' or just `--host=i386-linux' and add the
+     appropriate compiler flags (`-mcpu=i386' will do the trick) to
+     CFLAGS. (A library compiled for a Pentium (`i586') will still work
+     on a 386, but it may be slower.)
 
      If you give just `--build', configure will get confused.
 
@@ -304,6 +305,7 @@ build the GNU C library:
      Perl is not required, but it is used if present to test the
      installation.  We may decide to use it elsewhere in the future.
 
+
 If you change any of the `configure.in' files you will also need
 
    * GNU `autoconf' 2.12 or higher
@@ -367,10 +369,13 @@ maintainers by sending electronic mail to <bug-glibc@gnu.org>.
 
    Each case of `iX86' can be `i386', `i486', `i586', or `i686'.  All
 of those configurations produce a library that can run on any of these
-processors.  The library will be optimized for the specified processor,
-but will not use instructions not available on all of them.  If you
-want the library to use instructions only available on newer
-processors, give GCC the appropriate `-m' switches via CFLAGS.
+processors if the compiler is configured correctly.  The GCC compiler
+by default generates code that's optimized for the machine it's
+configured for and will use the instructions available on that machine.
+For example if your GCC is configured for `i686', gcc will optimize
+for `i686' and might issue some `i686' specific instructions.  To
+generate code for other models you should give GCC the appropriate
+`-march=' and `-mcpu=' compiler switches via CFLAGS.
 
 Specific advice for Linux systems
 =================================
@@ -407,7 +412,7 @@ installed there.
 library on your system against the new library for the sake of new code,
 but keep the old libraries around for old binaries to use.  This is
 complicated and difficult.  Consult the Glibc2 HOWTO at
-`http://www.imaxx.net/~thrytis/glibc' for details.
+<http://www.imaxx.net/~thrytis/glibc> for details.
 
    You cannot use `nscd' with 2.0 kernels, due to bugs in the
 kernel-side thread support.  `nscd' happens to hit these bugs
@@ -425,7 +430,7 @@ remain unfixed for all eternity, if not longer.
    It is a good idea to check first that the problem was not reported
 before.  Bugs are documented in two places: The file `BUGS' describes a
 number of well known bugs and the bug tracking system has a WWW
-interface at `http://www-gnats.gnu.org:8080/cgi-bin/wwwgnats.pl'.  The
+interface at <http://www-gnats.gnu.org:8080/cgi-bin/wwwgnats.pl>.  The
 WWW interface gives you access to open and closed reports.  The closed
 reports normally include a patch or a hint on solving the problem.
 
