--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-15  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* manual/job.texi (Process Group Functions): Document getpgid,
+	getsid.
+
 1999-08-15  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/unix/sysv/linux/aio_sigqueue.c: Take extra parameter and
