--- a/localedata/ChangeLog
+++ b/localedata/ChangeLog
@@ -1,3 +1,49 @@
+1999-08-13  Andreas Schwab  <schwab@suse.de>
+
+	* locales/cs_CZ: Remove <ft> entry, add <St> entry.
+	* locales/da_DK: Likewise.
+	* locales/de_DE: Likewise.
+	* locales/el_GR: Likewise.
+	* locales/en_CA: Likewise.
+	* locales/en_DK: Likewise.
+	* locales/en_DK.com: Likewise.
+	* locales/es_AR: Likewise.
+	* locales/es_BO: Likewise.
+	* locales/es_CL: Likewise.
+	* locales/es_CO: Likewise.
+	* locales/es_DO: Likewise.
+	* locales/es_EC: Likewise.
+	* locales/es_ES: Likewise.
+	* locales/es_GT: Likewise.
+	* locales/es_HN: Likewise.
+	* locales/es_MX: Likewise.
+	* locales/es_PA: Likewise.
+	* locales/es_PE: Likewise.
+	* locales/es_PY: Likewise.
+	* locales/es_SV: Likewise.
+	* locales/es_US: Likewise.
+	* locales/es_UY: Likewise.
+	* locales/es_VE: Likewise.
+	* locales/et_EE: Likewise.
+	* locales/fi_FI: Likewise.
+	* locales/hr_HR: Likewise.
+	* locales/hu_HU: Likewise.
+	* locales/is_IS: Likewise.
+	* locales/lt_LT: Likewise.
+	* locales/lv_LV: Likewise.
+	* locales/no_NO: Likewise.
+	* locales/pl_PL: Likewise.
+	* locales/ro_RO: Likewise.
+	* locales/ru_RU: Likewise.
+	* locales/ru_UA: Likewise.
+	* locales/sl_SI: Likewise.
+	* locales/sr_YU: Likewise.
+	* locales/sv_SE: Likewise.
+	* locales/tr_TR: Likewise.
+	* locales/uk_UA: Likewise.
+
+	* charmaps/ISO_10646: Fix typo.
+
 1999-08-15  Ulrich Drepper  <drepper@cygnus.com>
 
 	* locales/ca_ES: New file.
