--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-07-20  Geoff Keating  <geoffk@cygnus.com>
+
+	* math/libm-test.c: Tweak deltas for a clean run on ppc.
+
 1999-08-10  H.J. Lu  <hjl@gnu.org>
 
 	* stdio-common/vfprintf.c (ORIENT): Check for the old stream.
