--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-18  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* manual/install.texi (Configuring and compiling): Clarify ix86
+	situation.
+
 1999-08-18  Ulrich Drepper  <drepper@cygnus.com>
 
 	* Rules: When generating stdio_lim.h also rewrite IOV_MAX definition.
