--- a/INSTALL
+++ b/INSTALL
@@ -145,11 +145,10 @@ will be used, and CFLAGS sets optimization options for the compiler.
      compile but use what you say instead of guessing what your system
      is.  This is most useful to change the CPU submodel.  For example,
      if configure guesses your machine as `i586-pc-linux-gnu' but you
-     want to compile a library optimized for 386es, give
+     want to compile a library for 386es, give
      `--host=i386-pc-linux-gnu' or just `--host=i386-linux' and add the
      appropriate compiler flags (`-mcpu=i386' will do the trick) to
-     CFLAGS. (A library compiled for a Pentium (`i586') will still work
-     on a 386, but it may be slower.)
+     CFLAGS.
 
      If you give just `--build', configure will get confused.
 
@@ -370,13 +369,13 @@ If you are interested in doing a port, please contact the glibc
 maintainers by sending electronic mail to <bug-glibc@gnu.org>.
 
    Each case of `iX86' can be `i386', `i486', `i586', or `i686'.  All
-of those configurations produce a library that can run on any of these
-processors if the compiler is configured correctly.  The GCC compiler
-by default generates code that's optimized for the machine it's
-configured for and will use the instructions available on that machine.
-For example if your GCC is configured for `i686', gcc will optimize
-for `i686' and might issue some `i686' specific instructions.  To
-generate code for other models you should give GCC the appropriate
+of those configurations produce a library that can run on this
+processor and newer processors.  The GCC compiler by default generates
+code that's optimized for the machine it's configured for and will use
+the instructions available on that machine.  For example if your GCC is
+configured for `i686', gcc will optimize for `i686' and might issue
+some `i686' specific instructions.  To generate code for other models,
+you have to configure for that model and give GCC the appropriate
 `-march=' and `-mcpu=' compiler switches via CFLAGS.
 
 Specific advice for Linux systems
