--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+1999-08-18  Ulrich Drepper  <drepper@cygnus.com>
+
+	* ctype/ctype.h: Avoid useless #endif #if pairs.
+
+	* dirent/dirent.h: Define ino_t and ino64_t if not done already.
+	(seekdir): Fix type of second parameter.
+	* sysdeps/generic/seekdir.c: Likewise.
+	* sysdeps/mach/hurd/seekdir.c: Likewise.
+	* sysdeps/unix/seekdir.c: Likewise.
+
+	* dlfcn/dlfcn.h: Define RTLD_NEXT and RTLD_DEFAULT only if __USE_GNU.
+
 1999-08-18  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
 
 	* manual/install.texi (Configuring and compiling): Clarify ix86
