--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-08-18  Ulrich Drepper  <drepper@cygnus.com>
 
+	* math/libm-test.c (j0_test): Adjust deltas for m68k.
+	(jn_test): Likewise.
+
 	* dirent/dirent.h: Only define ino64_t if not already done.
 	* posix/sys/types.h: Likewise.
 
