--- a/linuxthreads/ChangeLog
+++ b/linuxthreads/ChangeLog
@@ -1,7 +1,7 @@
 1999-08-19  Ulrich Drepper  <drepper@cygnus.com>
 
 	* pthread.c (__pthread_reset_main_thread): Reset signal handlers
-	for the signals we used in the thread implementation.
+	for the signals we used in the thread implementation [PR libc/1234].
 
 	* Versions: Export __pthread_kill_other_threads_np from libpthread
 	for GLIBC_2.1.2.
