--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-20  Ulrich Drepper  <drepper@cygnus.com>
+
+	* elf/elf.h: Corrected SHT_ values from new draft.
+
 1999-08-20  Andreas Schwab  <schwab@suse.de>
 
 	* sysdeps/unix/sysv/linux/sys/sendfile.h: Fix typo.
