--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 1999-08-20  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/posix/getcwd.c: Allocate buffer large enough not only if
+	size == 0, but also for size < 0 [PR libc/1269].
+
 	* posix/execvp.c (execvp): Allocate array name of correct size.
 	Optimize inner loop.  Use execve directly, not execv.
 
