--- a/ChangeLog
+++ b/ChangeLog
@@ -18,6 +18,7 @@
 	in the message file and if necessary find approrpiate
 	conversion to match currently selected charset.
 	* include/libintl.h: Declare __dgettext and __dcgettext.
+	* include/iconv.h: New file.
 
 1999-08-20  Andreas Schwab  <schwab@suse.de>
 
