--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 1999-08-20  Ulrich Drepper  <drepper@cygnus.com>
 
+	* sysdeps/unix/sysv/linux/execve.c: Define weak alias execve.
+
 	* sysdeps/unix/sysv/linux/init-first.c (init): Remove personality
 	call.  It should not be necessary andis harmful for Alpha.
 
