--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-08-21  Ulrich Drepper  <drepper@cygnus.com>
+
+	* stdlib/fmtmsg.h: Don't define NULL to keep namespace clean.
+
 1999-08-20  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/unix/sysv/linux/execve.c: Define weak alias execve.
