--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-08-23  Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/regexbug1.c: Make it an error if the test fails.
+
+1999-08-23  Andreas Schwab  <schwab@suse.de>
+	    Ulrich Drepper  <drepper@cygnus.com>
+
+	* posix/regex.c (re_match_2_internal): Correct check for charset
+	after exactn in loop.
+
 1999-08-22  Ulrich Drepper  <drepper@cygnus.com>
 
 	* sysdeps/unix/sysv/linux/powerpc/syscalls.list: Add execve syscall.
