--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,23 @@
+1999-08-23  Andreas Jaeger  <aj@arthur.rhein-neckar.de>
+
+	* sysdeps/unix/sysv/linux/mips/bits/errno.h: New file.  Neccessary
+	since mips*-linux has ECANCELED.
+
+1999-08-23  Andreas Schwab  <schwab@suse.de>
+
+	* sysdeps/unix/sysv/linux/m68k/sigcontextinfo.h: Define
+	SIGCONTEXT_EXTRA_ARGS.
+	* sysdeps/unix/sysv/linux/i386/sigcontextinfo.h: Likewise.
+	* sysdeps/generic/sigcontextinfo.h: Likewise.
+	* sysdeps/mach/hurd/i386/sigcontextinfo.h: Likewise.
+	* sysdeps/unix/sysv/linux/alpha/sigcontextinfo.h: Likewise.
+	* sysdeps/unix/sysv/linux/arm/sigcontextinfo.h: Likewise.
+	* sysdeps/unix/sysv/linux/powerpc/sigcontextinfo.h: Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sparc32/sigcontextinfo.h:
+	Likewise.
+	* sysdeps/unix/sysv/linux/sparc/sparc64/sigcontextinfo.h:
+	Likewise.
+
 1999-08-23  Ulrich Drepper  <drepper@cygnus.com>
 
 	* posix/regexbug1.c: Make it an error if the test fails.
